--- a/docs/CSM_demographic.Rmd
+++ b/docs/CSM_demographic.Rmd
@@ -41,19 +41,25 @@ datatable(spec,rownames = FALSE, options = list(searching = FALSE))
 
 ### `puvspr.dat`
 
+The table shown here is a trimmed version showing the first 30 rows as an example of the type of data in the puvspr.dat file. The original dataset has 701 entries.
+
 ```{r}
 puvspr <- read.csv("tutorial/CSM_demographic/input/puvspr2.dat")
-datatable(puvspr,rownames = FALSE, options = list(searching = FALSE))
+datatable(puvspr[1:30,],rownames = FALSE, options = list(searching = FALSE))
 ```
 
 ### `pu.dat`
 
+The table shown here is a trimmed version showing the first 30 rows as an example of the type of data in the pu.dat file. The original dataset has 321 entries.
+
 ```{r}
 pu <- read.csv("tutorial/CSM_demographic/input/pu.dat")
-datatable(pu,rownames = FALSE, options = list(searching = FALSE))
+datatable(pu[1:30,],rownames = FALSE, options = list(searching = FALSE))
 ```
 
 ### Inital Conservation Features
+
+This map shows the bioregions and depth classes, which serve as conservation features in the Marxan analysis with no connectivity.
 
 ```{r}
 puvspr_wide <- puvspr %>%
@@ -75,7 +81,8 @@ output <- read.csv("tutorial/CSM_demographic/output/pu_no_connect.csv") %>%
 map <- leaflet(output) %>%
     addTiles()
 
-groups <- names(select(output,-best_solution,-select_freq))[c(-1,-2,-length(names(output)))]
+groups <- names(select(output,-best_solution,-select_freq, -fa_included, -aa_included, -id, -pu_id, -Y_COORD, -X_COORD, -TARGET_FID, -GAZ_LOC_CO, -GBR_NAME, -Join_Count, -PERIMETER, -QLD_NAME, -REEFS_, -REEFS_ID, -REEF_ID, -SUB_ID))[c(-1,-2)]
+groups <- groups[groups!="geometry"]
 
 for(i in groups){
     z <- unlist(data.frame(output)[i])
@@ -113,7 +120,7 @@ map %>%
 
 ### Adding Connectivity
 
-Let's begin by examining the spatial layers we've added in order to incorporate connectivity into the Marxan analysis. Marxan Connect needs a shapefile for the [planning units](glossary.html#5_planning_units), the [focus areas](glossary.html#4_focus_areas), and the [avoidance areas](glossary.html#4_focus_areas).
+Let's begin by examining the spatial layers we've added in order to incorporate connectivity into the Marxan analysis. Marxan Connect needs a shapefile for the [planning units](glossary.html#5_planning_units), the [focus areas](glossary.html#4_focus_areas), and the [avoidance areas](glossary.html#4_focus_areas). These spatial layers are shown in the map below.
 
 ```{r load all layers for CSM_demographic,results='hide'}
 # planning units
@@ -142,20 +149,22 @@ tmap_leaflet(p) %>%
 
 ### `connectivity_matrix.csv`
 
-The connectivity data is at the 'heart' of Marxan Connect's functionality. It allows the generation of new conservation features based on connectivity metrics as well as the definition of new boundaries based on the strength of the connection (i.e. the number of exchanged individuals) as opposed to the physical length of a shared boundary.
+The connectivity data is at the 'heart' of Marxan Connect's functionality. It allows the definition of new boundaries based on the strength of the connection (i.e. the number of exchanged individuals) as opposed to the physical length of a shared boundary.
 
-For the sake of you web browser, this table only contains the 7 row and columns of the connectivity matrix. The real file has 653 X 653
+For the sake of you web browser, this table only contains the 7 row and columns of the connectivity matrix. The real file has 321 X 321
 
 ```{r}
-conmat <- read.csv("tutorial/CSM_demographic/reefFlow.csv")[1:7,1:7]
-datatable(conmat,rownames = FALSE, options = list(searching = FALSE))
+conmat <- read.csv("tutorial/CSM_demographic/reefFlow.csv")
+datatable(conmat[1:7,1:7],rownames = FALSE, options = list(searching = FALSE))
 ```
 
 ### `boundary.dat`
 
+The table shown here is a trimmed version showing the first 30 rows as an example of the type of data in the puvspr_appended.dat file. The original dataset has 57753 entries.
+
 ```{r}
 puvspr <- read.csv("tutorial/CSM_demographic/input/boundary.dat")
-datatable(puvspr,rownames = FALSE, options = list(searching = FALSE))
+datatable(puvspr[1:30,],rownames = FALSE, options = list(searching = FALSE))
 ```
 
 Finally, running Marxan with the connectivity strength modifier and boundary definitions results in a different solution.
