--- a/docs/CSM_landscape.Rmd
+++ b/docs/CSM_landscape.Rmd
@@ -41,19 +41,25 @@ datatable(spec,rownames = FALSE, options = list(searching = FALSE))
 
 ### `puvspr.dat`
 
+The table shown here is a trimmed version showing the first 30 rows as an example of the type of data in the puvspr.dat file. The original dataset has 974 entries.
+
 ```{r}
 puvspr <- read.csv("tutorial/CSM_landscape/input/puvspr.dat")
-datatable(puvspr,rownames = FALSE, options = list(searching = FALSE))
+datatable(puvspr[1:30,],rownames = FALSE, options = list(searching = FALSE))
 ```
 
 ### `pu.dat`
 
+The table shown here is a trimmed version showing the first 30 rows as an example of the type of data in the puvspr.dat file. The original dataset has 653 entries.
+
 ```{r}
 pu <- read.csv("tutorial/CSM_landscape/input/pu.dat")
-datatable(pu,rownames = FALSE, options = list(searching = FALSE))
+datatable(pu[1:30,],rownames = FALSE, options = list(searching = FALSE))
 ```
 
 ### Inital Conservation Features
+
+This map shows the bioregions, which serve as conservation features in the Marxan analysis with no connectivity.
 
 ```{r}
 puvspr_wide <- puvspr %>%
@@ -75,7 +81,8 @@ output <- read.csv("tutorial/CSM_landscape/output/pu_no_connect.csv") %>%
 map <- leaflet(output) %>%
     addTiles()
 
-groups <- names(select(output,-best_solution,-select_freq))[c(-1,-2,-length(names(output)))]
+groups <- names(select(output,-best_solution,-select_freq))[c(-1,-2)]
+groups <- groups[groups!="geometry"]
 
 for(i in groups){
     z <- unlist(data.frame(output)[i])
@@ -113,7 +120,7 @@ map %>%
 
 ### Adding Connectivity
 
-Let's begin by examining the spatial layers we've added in order to incorporate connectivity into the Marxan analysis. Marxan Connect needs a shapefile for the [planning units](glossary.html#5_planning_units), the [focus areas](glossary.html#4_focus_areas), and the [avoidance areas](glossary.html#4_focus_areas).
+Let's begin by examining the spatial layers we've added in order to incorporate connectivity into the Marxan analysis. Marxan Connect needs a shapefile for the [planning units](glossary.html#5_planning_units), the [focus areas](glossary.html#4_focus_areas), and the [avoidance areas](glossary.html#4_focus_areas). These spatial layers are shown in the map below.
 
 ```{r load all layers for CSM_landscape,results='hide'}
 # planning units
@@ -144,27 +151,22 @@ tmap_leaflet(p) %>%
 
 The connectivity data is at the 'heart' of Marxan Connect's functionality. It allows the generation of new conservation features based on connectivity metrics.
 
-For the sake of you web browser, this table only contains the 7 row and columns of the connectivity matrix. The real file has 653 X 653
+Below is the connectivity matrix of our example conservation priority. For the sake of you web browser, this table only contains the 7 row and columns of the connectivity matrix. The real file has 1279227 entries.
 
 ```{r}
-conmat <- read.csv("tutorial/CSM_landscape/IsolationByDistance.csv")[1:7,]
-datatable(conmat,rownames = FALSE, options = list(searching = FALSE))
+conmat <- read.csv("tutorial/CSM_landscape/IsolationByDistance.csv")
+datatable(conmat[1:7,],rownames = FALSE, options = list(searching = FALSE))
 ```
 
-In this example we've chosen to append the new connectivity based conservation metrics to the existing Marxan files.
+### `boundary.dat`
 
-### `spec_appended.dat`
+This table represents the boundaries between planning units as the values in the connectivity matrix above.
 
-```{r}
-spec <- read.csv("tutorial/CSM_landscape/input/spec.dat")
-datatable(spec,rownames = FALSE, options = list(searching = FALSE))
-```
-
-### `puvspr_appended.dat`
+The table shown here is a trimmed version showing the first 30 rows as an example of the type of data in the boundary.dat file. The original dataset has 38648 entries.
 
 ```{r}
-puvspr <- read.csv("tutorial/CSM_landscape/input/puvspr.dat")
-datatable(puvspr,rownames = FALSE, options = list(searching = FALSE))
+boundary <- read.csv("tutorial/CSM_landscape/input/boundary.dat")
+datatable(boundary[1:30,],rownames = FALSE, options = list(searching = FALSE))
 ```
 
 Finally, running Marxan with the connectivity conservation features and boundary definitions results in a different solution.
